--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,29 @@
 language: ruby
+cache: bundler
 sudo: false
 rvm:
   - 2.0.0
-  - 2.2.0
-  - 2.2.4
+  - 2.2
+  - ruby-head
+  - jruby-19mode
+  - jruby-9.0.1.0
+  - rbx-2
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: rbx-2
+  fast_finish: true
+before_install: gem update --remote bundler
+install:
+  - bundle install --retry=3
 gemfile:
   - gemfiles/rails_4.0.gemfile
   - gemfiles/rails_4.1.gemfile
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_stable.gemfile
-script: "bundle exec rake spec"
+script:
+  - 'bundle exec rake spec'
+  - 'bundle exec rubocop'
 addons:
   code_climate:
     repo_token: 344f2a60a2920e96f71877b87829836b01a44e1e94463cde54e2c54e8f389f79
